5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1807_2565.log
== TEST (2019-06-08 21:40:23) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif (v2[i] * 100 / 100 < 75):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:41:27) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif (v2[i] * 60 / 100 < 75):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:41:51) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif (v2[i] * ch / 100 < 75):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:48:13) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif: (v2[i] < ch * 75 // 100):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- ERROR:
File "XXXX", line 9
    elif: (v2[i] < ch * 75 // 100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:49:00) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif: (v2[i] < (ch * 75 // 100)):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- ERROR:
File "XXXX", line 9
    elif: (v2[i] < (ch * 75 // 100)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:49:10) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif (v2[i] < (ch * 75 // 100)):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:49:32) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif (v2[i] < (ch * 75 // 100)):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- EXECUTION TIME:
1.22912
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:58:49) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif (v2[i] < (ch * 75 // 100)):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:59:31) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
ch = int(input("Digite: "))
r = array(zeros(3,dtype=int))
for i in range(size(v1)):
	if (v1[i] < 5):
		r[1] = r[1] + 1
	elif (v2[i] < (ch * 75 // 100)):
		r[2] = r[2] + 1
	else:
		r[0] = r[0] + 1
print(r)

-- EXECUTION TIME:
0.893074
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
